# eal-2026.0.0

./: .gitmodules  CONTRIBUTING.md  README.md
.github/: CODEOWNERS
libraries/dl-streamer/src/: CMakeLists.txt
libraries/dl-streamer/src/base/openvino_inference_backend/: CMakeLists.txt
libraries/dl-streamer/src/gst/bins/model_proc/: CMakeLists.txt
libraries/dl-streamer/src/gst/elements/gvafpscounter/: fpscounter.cpp  fpscounter.h  gstgvafpscounter.c
libraries/dl-streamer/src/gst/python/: inference_openvino.py  python_object_association.py  pytorch_tensor_inference.py
libraries/dl-streamer/src/monolithic/gst/audio_inference_elements/: CMakeLists.txt
libraries/dl-streamer/src/monolithic/gst/common/: CMakeLists.txt  gva_caps.h
libraries/dl-streamer/src/monolithic/gst/elements/: CMakeLists.txt
libraries/dl-streamer/src/monolithic/gst/elements/gstlidarparse/: CMakeLists.txt  gstlidarmeta.cpp  gstlidarmeta.h  gstlidarparse.cpp  gstlidarparse.h
libraries/dl-streamer/src/monolithic/gst/elements/gstradarparse/: CMakeLists.txt  gstradarparse.cpp  gstradarparse.h
libraries/dl-streamer/src/monolithic/gst/elements/gvadeskew/: gvadeskew.cpp
libraries/dl-streamer/src/monolithic/gst/elements/gvametaaggregate/: metaaggregate.c
libraries/dl-streamer/src/monolithic/gst/elements/gvamotiondetect/: CMakeLists.txt  gvamotiondetect.cpp  gvamotiondetect_win.cpp
libraries/dl-streamer/src/monolithic/gst/elements/gvapython/: python_callback.cpp
libraries/dl-streamer/src/monolithic/gst/elements/gvatrack/: deep_sort_tracker.cpp  deep_sort_tracker.h  deep_sort_tracker_1.cpp  gstgvatrack.cpp  gstgvatrack_1.cpp  tracker_factory.cpp
libraries/dl-streamer/src/monolithic/gst/elements/gvawatermark/: gvawatermarkcaps.h
libraries/dl-streamer/src/monolithic/gst/elements/gvawatermark3d/: gvawatermark3d.cpp
libraries/dl-streamer/src/monolithic/gst/gvamtcnn/gvabboxregression/: bbox_regression.cpp
libraries/dl-streamer/src/monolithic/gst/registrator/: CMakeLists.txt  register_elements.cpp
libraries/dl-streamer/src/monolithic/inference_backend/image_inference/: CMakeLists.txt  image_inference.cpp
libraries/dl-streamer/src/opencl/opencl_tensor_normalize/: opencl_tensor_normalize.cpp
libraries/dl-streamer/src/opencv/opencv_barcode_detector/: CMakeLists.txt
libraries/dl-streamer/src/openvino/_gst_plugin/: CMakeLists.txt
libraries/dl-streamer/src/openvino/openvino_inference/: CMakeLists.txt
libraries/dl-streamer/src/utils/: safe_arithmetic.hpp
(+379 files in other folders)
